modification of data in forms html and addition of component gitsearcch

--- a/src/app/gitsearch-form/gitsearch-form.component.html
+++ b/src/app/gitsearch-form/gitsearch-form.component.html
@@ -1,1 +1,8 @@
-<p>gitsearch-form works!</p>
+<div class="container-fluid">
+    <h2 class="text-center">Create a new search</h2>
+    <hr>
+<form class="example" action="action_page.php">
+    <input type="text" placeholder="Search.." name="search">
+    <button type="submit"><i class="fa fa-search"></i></button>
+  </form>
+</div>
