addition of this commit will make changes to forms html and the gitsearch components

--- a/src/app/gitsearch/gitsearch.component.html
+++ b/src/app/gitsearch/gitsearch.component.html
@@ -1,1 +1,6 @@
-<p>gitsearch works!</p>
+<!--The content below is only a placeholder and can be replaced.-->
+
+  
+  
+  <router-outlet></router-outlet>
+  
