--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div style="text-align:center">
+<div class= "container-fluid bg-neg">
+ <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -7,6 +8,7 @@
     <hr>
 <form class="example" action="action_page.php">
     <input type="text" placeholder="Search.." name="search">
-    <button type="submit"><i class="fa fa-search"></i></button>
+    <button class="btn btn-primary"><i class="fa fa-search">search</i></button>
   </form>
+</div>
 </div>
