--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,2 @@
-<div class= "container-fluid bg-neg">
- <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <div class="container-fluid">
-    <h2 class="text-center">Create a new search</h2>
-    <hr>
-<form class="example" action="action_page.php">
-    <input type="text" placeholder="Search.." name="search">
-    <button class="btn btn-primary"><i class="fa fa-search">search</i></button>
-  </form>
-</div>
-</div>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
