--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-@import "~bootstrap/dist/css/bootstrap.css"
+@import "~bootstrap/dist/css/bootstrap.css";
+body{
+    background-image: url('assets/image/back.jpeg');
+    background-size: cover;
+}
