added html file structure for the repository to display

--- a/src/app/repository/repository.component.html
+++ b/src/app/repository/repository.component.html
@@ -1,1 +1,5 @@
-<p>repository works!</p>
+<div class="jumbotron">
+    <h1 class="display-4 text-center">Repository App</h1>
+    <hr class="my-4">
+    <p class="lead text-center">An Angular app that let's you create your Repositorys and gives you Repositorys from the world of computing!</p>
+  </div>
